manual page alignment fixes

--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@
 .welcome-msg {
   text-align: left;
   color: #1473a2;
-  margin: 10px 10px 0 10px;
+  padding: 10px 10px 0;
 }
 .photos-section {
   margin: 0 10px;
@@ -193,8 +193,6 @@ body {
 .manualFormContainer {
   display: flex;
   justify-content: space-between;
-  padding:00px;
-  height: 80vh;
 }
 #dropdown-basic,
 .MuiOutlinedInput-root,
